--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,11 @@ html {
     scroll-behavior: smooth;
 }
 
+html, body{
+    overflow-x: hidden;
+    width: auto;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
@@ -313,6 +318,7 @@ section.showcase{
     width: 100%;
     height: 100vh;
     padding: 0 10%;
+    overflow-y: hidden;
 }
 
 .chef-area{
@@ -347,11 +353,11 @@ section.showcase{
     grid-template-columns: repeat(4, 1fr);
     row-gap: 8rem; */
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     row-gap: 100px;
-    column-gap: 40px;
+    column-gap: 5px;
     margin-top: 8rem;
 }
 
@@ -372,7 +378,7 @@ section.showcase{
     background-color: #3D0000;
     margin: 10px;
     color: #F5E8C7;
-    width: 250px;
+    max-width: 250px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 0 4px #FF0000;
@@ -685,7 +691,7 @@ section.showcase{
 }
 
 .booking-form input{
-    max-width: 100%;
+    width: 100%;
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -1195,6 +1201,11 @@ section.showcase{
         display: flex;
     }
 
+    .header .navbar .search-box form input{
+        width: 100%;
+        font-size: initial;
+    }
+
     .header .navbar .menu-icon i{
         font-size: 30px;
     }
@@ -1217,7 +1228,11 @@ section.showcase{
 
     .header .navbar .menu-icon{
         display: block;
-        padding-left: 20px;
+        padding-left: 10px;
+    }
+
+    .header .navbar .menu-icon i{
+        font-size: 1.2rem;
     }
 
     .showcase h2{
@@ -1236,6 +1251,11 @@ section.showcase{
         align-items: center;
         column-gap: 40px;
     } */
+
+    .dish-cards, .cart-cards{
+        justify-content: center;
+        column-gap: 20px;
+    }
 
     .chef-cards{
         flex-wrap: wrap;
@@ -1286,7 +1306,9 @@ section.showcase{
     
     .header .navbar .login i{
         display: block;
+        font-size: 1rem;
     }
+
 
     section.showcase{
         flex-direction: column-reverse;
@@ -1324,7 +1346,14 @@ section.showcase{
     }
 
     .booking-content .booking-form {
+        margin: 0;
         margin-top: 40px;
+        grid-template-columns: 0.5fr 2fr;
+        width: 100%;
+    }
+
+    .booking-content .booking-form input{
+        width: 100%;
     }
 
     .customer-card{
@@ -1332,6 +1361,19 @@ section.showcase{
         text-align: center;
     }
 
+    .customer-card img{
+        width: 80%;
+        height: 200px;
+        margin-bottom: 20px;
+    }
+
+    .customer-card .customer-text{
+        margin: 0;
+    }
+
+    .customer-card .customer-text h3{
+        margin: 0;
+    }
 
     .customer-card .customer-text h4{
         font-size: 24px;
@@ -1340,5 +1382,9 @@ section.showcase{
 
     .customer-card .customer-text p{
         display: none;
+    }
+
+    .footer {
+        grid-template-columns: 1fr;
     }
 }
